--- a/01-initial-notebook/nyc_taxi_duration_prediction.ipynb
+++ b/01-initial-notebook/nyc_taxi_duration_prediction.ipynb
@@ -489,7 +489,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ie-mlops-nyc-taxis",
+   "display_name": ".venv (3.12.7)",
    "language": "python",
    "name": "python3"
   },
@@ -503,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
