--- a/02-data-sampling-features/nyc_taxi_duration_prediction_data_fe.ipynb
+++ b/02-data-sampling-features/nyc_taxi_duration_prediction_data_fe.ipynb
@@ -617,7 +617,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ie-mlops-nyc-taxis",
+   "display_name": ".venv (3.12.7)",
    "language": "python",
    "name": "python3"
   },
@@ -631,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
